<resources>
    <string name="app_name">Project Flow</string>
    <string name="my_projects">Projects in Flow</string>
    <string name="no_projects">There is nothing here… Why not create a new one?</string>
    <string name="new_project">New project</string>
    <string name="create_project">Create Project</string>
    <string name="value_hint">Enter value</string>
    <string name="documentation">Documentation</string>
    <string name="tasks">Tasks</string>
    <string name="whiteboard">Whiteboard</string>
    <string name="dashboard">Dashboard</string>
    <string name="grid_on">Grid</string>
    <string name="grid_off">Plain</string>
    <string name="scaling_mode">Hand</string>
    <string name="drawing_mode">Draw</string>
    <string name="save_image">Save the image</string>
    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer\n</string>
    <string name="image_thumbnail">image thumbnail</string>
    <string name="new_image">New image</string>
    <string name="placeholder">Hello blank text</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>