<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WorkActivity"
    android:padding="8dp"
    android:background="@color/colorPrimary"
    >

    <TextView
        android:id="@+id/documentation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/documentation"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:background="@drawable/rounded_corner_solid"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/tasks"
        android:textSize="25sp"
        android:layout_margin="8dp"
        android:background="@drawable/rounded_corner_solid"
        />

    <TextView
        android:id="@+id/whiteboard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/whiteboard"
        android:textSize="25sp"
        android:layout_margin="8dp"
        android:background="@drawable/rounded_corner_solid"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/dashboard"
        android:textSize="25sp"
        android:layout_margin="8dp"
        android:background="@drawable/rounded_corner_solid"
        />

</LinearLayout>