<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WhiteBoardActivity">


    <com.hfad.projectflow.DrawShapeView
        android:id="@+id/draw_shape_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true">

        <ToggleButton
            android:id="@+id/hand_toggle"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/scaling_mode"
            android:textOff="@string/drawing_mode"
            />

        <ToggleButton
            android:id="@+id/grid_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textOn="@string/grid_on"
            android:textOff="@string/grid_off"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        >

        <Button
            android:id="@+id/rect_button"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:backgroundTint="@color/colorPrimary"
            />

        <Button
            android:id="@+id/circle_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:background="@drawable/circle_shape"
            />

        <Button
            android:id="@+id/diamond_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/diamond_shape"/>

        <Button
            android:id="@+id/line_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/line_shape"/>

    </LinearLayout>

</RelativeLayout>